<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/test_bank_ekyc_app"
            app:titleTextColor="@android:color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/ivBankLogo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:src="@drawable/test_bank" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/outlinedCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="1dp">

                <ImageView
                    android:id="@+id/ivDefaultIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/add_photo"
                    app:tint="@color/hint" />

                <ImageView
                    android:id="@+id/ivPreview"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="gone" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTakePhoto"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/take_photo"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_cam"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAttachImage"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/attach_image"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_attach"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="@color/black" />

            </LinearLayout>


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:indeterminate="true" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dataDisplayCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/document_detail"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilDocumentType"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/document_type">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDocumentType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilNicNo"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/nic">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNicNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tieDrivingLicenceNo"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/driving_licence_no">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDrivingLicenceNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiePassportNo"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/passport_no">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassportNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </ScrollView>


</LinearLayout>